--- a/base-html/index.html
+++ b/base-html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN">
 <body> 
-    <p>
+    <p style="background-color: orange;">
         <b>HTML-документ</b> - <u>это обычный текстовый документ</u> может быть создан как в обычном текстовом редакторе
         (Блокнот), так и в специализированном, с подсветкой кода (Notepad++, Visual Studio Code и т.п.). HTML-документ
         имеет расширение .html.
@@ -10,7 +10,7 @@
         <b>HTML-документ</b> состоит из дерева HTML-элементов и текста. Каждый элемент обозначается в исходном
         документе начальным (открывающим) и конечным (закрывающим) тегом (за редким исключением).
     </p>
-    <p>
+    <p style="color: purple;">
         <b>Начальный тег</b> показывает, <u>где начинается элемент</u>, <b>конечный</b> - <u>где заканчиваются</u>. Закрывающий тег образуется
         путем добавления слэша / перед именем тега: <i><имя тега>...</имя тега></i>.Между начальным и закрывающим тегами
         находится содержимое элемента — контент.
@@ -18,9 +18,9 @@
     <p>
         Например:
         <ol>
-         <li> < p > Контент< /p > – Создаёт параграф</li>  
-         <li>< b><b>КОНТЕНТ</b>< /b> Делает полужирное начертание</li>
-         <li>< i><i>КОНТЕНТ</i>< /i>Курсивное начертание</li>
+         <li style="color: blue;"> < p > Контент< /p > – Создаёт параграф</li>  
+         <li style="background-color: red;">< b><b>КОНТЕНТ</b>< /b> Делает полужирное начертание</li>
+         <li style="color: rgb(9, 248, 9);">< i><i>КОНТЕНТ</i>< /i>Курсивное начертание</li>
         </ol>
         Решимов А.Е 05.03.2022
     </p>
